# networking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  config.json  main.cpp  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
.github/workflows/: main.yml  release.yml
conan-build/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
contrib/libpqxx-6.4.7/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  libpqxx-config-version.cmake  libpqxx-targets.cmake
contrib/libpqxx-6.4.7/include/: Makefile  cmake_install.cmake
contrib/libpqxx-6.4.7/include/pqxx/: Makefile  config-internal-autotools.h  config.h  config_cmake.h.in
contrib/libpqxx-6.4.7/src/: Makefile  cmake_install.cmake
contrib/libpqxx-6.4.7/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runner
contrib/libpqxx-6.4.7/test/unit/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_runner
scripts/: networking-database.pgsql
src/: CMakeLists.txt  main.cpp  udp_server.h
test/: CMakeLists.txt  test.cpp
